21) kernel: net: validate the range we feed to iov_iter_init() in sys_sendto/sys_recvfrom.<br>
22) kernel: net: separate the close_list and the unreg_list.<br>
23) kernel: net: fix high overhead of vlan sub-device teardown.<br>
<br>
<br>
<b>2.7.x</b><br>
1) build_system: small rework DoConfigure.sh scripts.<br>
2) init.d: six: fix logic dhcpv6/radvd configure if not prefix recived (experimental).<br>
3) init.d: six: always remove sit module in stop path (auto loaded after call ip tool).<br>
4) dhcpv6: fix renewal of IA NA.<br>
5) dhcpv6: close file descriptors on exec.<br>
6) dhcpv6: try and generate a default IFID only if an IFID is not configured.<br>
7) dhcpv6: ignore advertise messages with none of requested data and missed status codes.<br>
8) kernel: ralink_wifi: disable 40MHz intolerant support if DRAFT3 undefined.<br>
9) kernel: ralink_hw_nat: exclude UDP bug check for MT7621.<br>
10) kernel: ralink_raeth: fix SG regression.<br>
11) kernel: net: af_packet: make tpacket_rcv to not set status value before run_filter.<br>
12) kernel: net: ipmr,ip6mr: call ip6mr_free_table() on failure path.<br>
13) kernel: net: netfilter: bridge: kill nf_bridge_pad.<br>
14) kernel: net: ipv6: Don't reduce hop limit for an interface.<br>
<br>
<br>
<b>2.8.x</b><br>
1) goahead: fix lang select race in some situations.<br>
2) goahead: fix upload firmware error handling.<br>
3) kernel: ralink_raeth: add support MT7621 QDMA, split PDMA/QDMA code, code refactoring.<br>
4) kernel: ralink_hw_nat: add support MT7621 QDMA, write FoE descriptors by DWORD chunk.<br>
5) kernel: mips: fix race condition in lazy cache flushing.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) need add dsvfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>